--- a/solutions/03_agglomeration.ipynb
+++ b/solutions/03_agglomeration.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,22 +66,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading data from train_net_small_500000.zarr\n"
+     ]
+    }
+   ],
    "source": [
     "# Load the data (make sure you ran inference.ipynb before).\n",
     "# By default, you wrote out the big ROI at iteration 500000. However, if you changed iteration \n",
-    "# or datasetsize, model or out_file name\n",
+    "# or datasetsize, or model\n",
     "datasetsize = 'small' # change accordingly\n",
     "iteration = 500000 # Change to check out other training iterations\n",
-    "aff_file = 'affinities_{}_{:05}.zarr'.format(datasetsize, iteration)\n",
     "\n",
+    "# Pretrained network\n",
+    "model = 'train_net' # Change to your own model\n",
+    "\n",
+    "\n",
+    "\n",
+    "aff_file = '{}_{}_{:05}.zarr'.format(model, datasetsize, iteration)\n",
+    "print('Loading data from {}'.format(aff_file))\n",
     "\n",
     "\n",
     "# --------- Do Not Change --------\n",
     "gt_file = '../../jan/segmentation/data/sample_0.n5'\n",
-    "# gt_file =  'sample_0.n5'\n",
     "affs_ds = daisy.open_ds(aff_file, 'volumes/affs')\n",
     "raw_ds = daisy.open_ds(aff_file, 'volumes/raw')\n",
     "gtds = daisy.open_ds(gt_file, 'volumes/labels/neuron_ids')\n",
@@ -97,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +119,7 @@
        "Text(0.5, 1.0, 'Raw')"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -152,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +198,7 @@
        "Text(0.5, 1.0, 'ConnectedComponents')"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -226,14 +239,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "http://184.105.98.58:46229/v/f329bba9ecda6d14884e89e069ede0dcc9f474da/\n"
+      "you first have to set the ip address of your paperspace machine at the top\n"
      ]
     }
    ],
@@ -269,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "metadata": {
     "scrolled": false
    },
@@ -278,7 +291,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "http://184.105.98.58:46229/v/90c6a4a61ee994aae1e773782295234cdf5d0802/\n"
+      "you first have to set the ip address of your paperspace machine at the top\n"
      ]
     }
    ],
@@ -315,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +337,7 @@
        "Text(0.5, 1.0, 'Connected Component from Affinity Graph')"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -353,14 +366,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "http://184.105.98.58:46229/v/8f986f1dc2e2d0696f2d31426d2b5408143f9dfb/\n"
+      "http://:37703/v/fea4c31b8e901299374e84c5f0b0b58126fbc8c9/\n"
      ]
     }
    ],
@@ -385,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +414,7 @@
        "Text(0.5, 1.0, 'Raw')"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -445,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 37,
    "metadata": {
     "scrolled": true
    },
@@ -473,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +495,7 @@
        "Text(0.5, 1.0, 'Raw')"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -533,25 +546,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 39,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Re-using already compiled waterz version\n",
-      "Preparing segmentation volume...\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:utils:Number of segments in volume: 1197\n",
-      "INFO:utils:Number of segments in volume: 422\n"
+      "INFO:utils:Number of segments in volume: 1197\n"
      ]
     },
     {
@@ -568,6 +572,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "INFO:utils:Number of segments in volume: 422\n",
       "INFO:utils:Number of segments in volume: 259\n"
      ]
     },
@@ -576,20 +581,7 @@
      "output_type": "stream",
      "text": [
       "Re-using already compiled waterz version\n",
-      "Preparing segmentation volume...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:utils:Number of segments in volume: 64\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Preparing segmentation volume...\n",
       "Re-using already compiled waterz version\n",
       "Preparing segmentation volume...\n"
      ]
@@ -598,6 +590,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "INFO:utils:Number of segments in volume: 64\n",
       "INFO:utils:Number of segments in volume: 1\n"
      ]
     },
@@ -605,7 +598,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "http://184.105.98.58:46229/v/f4c1c44e6f1edc5b5f7b7dc09acbfdfb7800c355/\n"
+      "Re-using already compiled waterz version\n",
+      "Preparing segmentation volume...\n",
+      "http://:37703/v/b3a340a3e17a45d8c531762084be6a1598aca340/\n"
      ]
     }
    ],
@@ -636,14 +631,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "http://184.105.98.58:46229/v/c887eb7898f9a67171ff9505fc4cab98179cc843/\n"
+      "http://:37703/v/47e1bfb268f1c653aef35216b48c5b842e794a78/\n"
      ]
     }
    ],
@@ -672,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +685,7 @@
        "(-0.5, 279.5, 279.5, -0.5)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -735,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -789,9 +784,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Re-using already compiled waterz version\n",
+      "Preparing segmentation volume...\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -804,8 +807,6 @@
      "output_type": "stream",
      "text": [
       "Re-using already compiled waterz version\n",
-      "Preparing segmentation volume...\n",
-      "Re-using already compiled waterz version\n",
       "Preparing segmentation volume...\n"
      ]
     },
@@ -813,7 +814,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:utils:Number of segments in volume: 1197\n"
+      "INFO:utils:Number of segments in volume: 1197\n",
+      "INFO:utils:Number of segments in volume: 901\n"
      ]
     },
     {
@@ -828,7 +830,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:utils:Number of segments in volume: 901\n",
       "INFO:utils:Number of segments in volume: 422\n"
      ]
     },
@@ -944,6 +945,18 @@
    "display_name": "Python [conda env:segmentation]",
    "language": "python",
    "name": "conda-env-segmentation-py"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
