Add Type Here Your Solution Cells

--- a/exercises/02_inference.ipynb
+++ b/exercises/02_inference.ipynb
@@ -206,6 +206,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Solution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Type your solution here\n",
+    "# -------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Exercise 3 : Check predicted affinities in neuroglancer\n",
     "1. Check out whether your prediction was successfull by exploring the result in `neuroglancer`\n",
     "2. You can predict datasets for multiple iterations, and compare them in neuroglancer\n",
